unpackaged/main/default/objects/Procesamiento_Archivo_XML__c/Procesamiento_Archivo_XML__c.object-meta.xml
<CustomObject>
    <label>Procesamiento Archivo XML</label>
    <nameField>
        <displayFormat>PA-{0000000000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Procesamientos Archivo XML</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>