unpackaged/main/default/objects/Procesamiento_Archivo_XML__c/fields/Fecha_y_Hora_Fin__c.field-meta.xml
<CustomField>
    <fullName>Fecha_y_Hora_Fin__c</fullName>
    <label>Fecha y Hora Fin</label>
    <type>DateTime</type>
</CustomField>