unpackaged/main/default/objects/Procesamiento_Archivo_XML__c/fields/Fecha_y_Hora_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_y_Hora_Inicio__c</fullName>
    <label>Fecha y Hora Inicio</label>
    <type>DateTime</type>
</CustomField>