unpackaged/main/default/objects/Procesamiento_Archivo_XML__c/fields/Inicio_de_Proceso__c.field-meta.xml
<CustomField>
    <fullName>Inicio_de_Proceso__c</fullName>
    <label>Inicio de Proceso</label>
    <length>100</length>
    <type>Text</type>
</CustomField>