unpackaged/main/default/objects/Procesamiento_Archivo_XML__c/fields/Total_Segundos__c.field-meta.xml
<CustomField>
    <fullName>Total_Segundos__c</fullName>
    <label>Total Segundos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>