unpackaged/main/default/objects/Procesamiento_Archivo_XML__c/fields/XML_Siebel__c.field-meta.xml
<CustomField>
    <fullName>XML_Siebel__c</fullName>
    <label>XML Siebel</label>
    <referenceTo>XML_Siebel__c</referenceTo>
    <relationshipLabel>Procesamientos Archivo XML</relationshipLabel>
    <relationshipName>Procesamientos_Archivo_XML</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>